# dawrs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: drumkit.rs  marry_had_a_little_lamb.rs  release_0_1.rs
src/: cpal.rs  lib.rs  patch.rs  poly_sample.rs  sample_timing.rs
src/effect/: delay.rs  filter.rs  lag.rs  mod.rs  oscilloscope.rs
src/generator/: adsr.rs  mod.rs  sine.rs  triangle.rs
src/sample_timing/: impl_ops.rs  mod.rs
src/synthesizer/: basic_synthesizer.rs  mod.rs
