[package]
name = "dawrs"
version = "0.1.0"
authors = ["XBagon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
anyhow = "1.0.35"
plotters = "0.3.0"
shrinkwraprs = "0.3.0"
serde = "1.0.118"
rand = "0.7.3"
