[package]
name = "dawrs"
version = "0.1.0"
authors = ["XBagon <xbagon@outlook.de>"]
edition = "2018"
description = "DAW-like music/sound production library."
repository = "https://github.com/XBagon/dawrs"
license = "MIT"
keywords = ["digital", "audio", "workstation", "daw", "music"]
categories = ["multimedia::audio"]
readme = "README.md"

[badges]
github = { repository = "XBagon/dawrs" }

[dependencies]
cpal = "0.13.1"
anyhow = "1.0.35"
plotters = "0.3.0"
shrinkwraprs = "0.3.0"
serde = "1.0.118"
rand = "0.7.3"
tinyvec = "1.1.0"
crossbeam-channel = "0.5.0"
take_mut = "0.2.2"
approx = "0.4.0"
rustfft = "5.0.1"

[features]
default = ["stereo"]

mono = []
stereo = []
unlimited = []